Fixed footer on narrow window sizes from looking funny

--- a/answerharbor_app/static/css/style.css
+++ b/answerharbor_app/static/css/style.css
@@ -52,6 +52,7 @@ a:hover {
 .site-footer {
   height: 75px;
   width: 100%;
+  min-width: 1024px;
   background-color: #222;
   box-sizing: border-box;
   margin-top: -75px;
